# htrdr_kmin

./: .gitignore  Makefile  Makefile.atmosphere  Makefile.combustion  Makefile.core  Makefile.planets  README.md  config.mk  htrdr-atmosphere.1.in  htrdr-atmosphere.pc.in  htrdr-combustion.1.in  htrdr-combustion.pc.in  htrdr-core.pc.in  htrdr-materials.5  htrdr-obj.5  htrdr-planeto.pc.in  htrdr-planets.pc.in  htrdr.1  install.sh  make.sh  rnrl.5
cmake/: CMakeLists.txt
cmake/atmosphere/: CMakeLists.txt
cmake/combustion/: CMakeLists.txt
cmake/commands/: CMakeLists.txt
cmake/core/: CMakeLists.txt
cmake/doc/: CMakeLists.txt
cmake/planeto/: CMakeLists.txt
doc/: cli.txt  ground  htrdr-atmosphere.1.in  htrdr-atmosphere.1.scd.in  htrdr-atmosphere.1.txt.in  htrdr-combustion.1.in  htrdr-combustion.1.scd.in  htrdr-combustion.1.txt.in  htrdr-image.5  htrdr-image.5.scd  htrdr-image.5.txt  htrdr-materials.5  htrdr-materials.5.scd  htrdr-materials.5.txt  htrdr-obj.5  htrdr-obj.5.scd  htrdr-obj.5.txt  htrdr-planeto.1.in  htrdr-planeto.1.scd.in  htrdr-planets.1.in  htrdr.1  htrdr.1.scd  htrdr.1.txt  htrdr.1.txt.in  rnrl.5  rnrl.5.scd  rnrl.scd
src/: :w  htrdr.c  htrdr.h  htrdr.in  htrdr_CIE_XYZ.c  htrdr_CIE_XYZ.h  htrdr_args.c  htrdr_args.h  htrdr_args.h.in  htrdr_buffer.c  htrdr_buffer.h  htrdr_c.h  htrdr_camera.c  htrdr_camera.h  htrdr_cie_xyz.c  htrdr_cie_xyz.h  htrdr_clouds.c  htrdr_clouds.h  htrdr_compute_radiance_lw.c  htrdr_compute_radiance_sw.c  htrdr_draw_map.c  htrdr_draw_radiance.c  htrdr_draw_radiance_sw.c  htrdr_draw_sw.c  htrdr_grid.c  htrdr_grid.h  htrdr_ground.c  htrdr_ground.h  htrdr_interface.c  htrdr_interface.h  htrdr_main.c  htrdr_materials.c  htrdr_materials.h  htrdr_mtl.c  htrdr_mtl.h  htrdr_openexr.c  htrdr_openexr.h  htrdr_ran_lw.c  htrdr_ran_lw.h  htrdr_ran_wlen.c  (+18 more)
src/atmosphere/: htrdr_atmosphere.c  htrdr_atmosphere.h  htrdr_atmosphere_args.c  htrdr_atmosphere_args.h.in  htrdr_atmosphere_c.h  htrdr_atmosphere_compute_radiance_lw.c  htrdr_atmosphere_compute_radiance_sw.c  htrdr_atmosphere_draw_map.c  htrdr_atmosphere_ground.c  htrdr_atmosphere_ground.h  htrdr_atmosphere_main.c  htrdr_atmosphere_sun.c  htrdr_atmosphere_sun.h
src/combustion/: htrdr_combustion.c  htrdr_combustion.h  htrdr_combustion_args.c  htrdr_combustion_args.h  htrdr_combustion_args.h.in  htrdr_combustion_c.h  htrdr_combustion_compute_radiance_sw.c  htrdr_combustion_draw_map.c  htrdr_combustion_geometry_ray_filter.c  htrdr_combustion_geometry_ray_filter.h  htrdr_combustion_laser.c  htrdr_combustion_laser.h  htrdr_combustion_main.c  htrdr_combustion_phase_func.c  test_htrdr_combustion_laser.c
src/commands/: htrdr_atmosphere_cmd.c  htrdr_cmd.c  htrdr_combustion_cmd.c  htrdr_planeto_cmd.c  htrdr_planets_cmd.c
src/core/: htrdr.c  htrdr.h  htrdr_accum.h  htrdr_args.c  htrdr_args.h  htrdr_args.h.in  htrdr_buffer.c  htrdr_buffer.h  htrdr_c.h  htrdr_camera.c  htrdr_camera.h  htrdr_cie_xyz.c  htrdr_cie_xyz.h  htrdr_draw_map.c  htrdr_draw_map.h  htrdr_geometry.c  htrdr_geometry.h  htrdr_interface.h  htrdr_log.c  htrdr_log.h  htrdr_main.c  htrdr_materials.c  htrdr_materials.h  htrdr_proc_work.c  htrdr_proc_work.h  htrdr_ran_wlen.c  htrdr_ran_wlen.h  htrdr_ran_wlen_cie_xyz.c  htrdr_ran_wlen_cie_xyz.h  htrdr_ran_wlen_discrete.c  htrdr_ran_wlen_discrete.h  htrdr_ran_wlen_planck.c  htrdr_ran_wlen_planck.h  htrdr_rectangle.c  htrdr_rectangle.h  htrdr_sensor.c  htrdr_sensor.h  htrdr_slab.c  htrdr_slab.h  htrdr_solve_buffer.c  (+4 more)
src/planeto/: htrdr_planeto.c  htrdr_planeto.h  htrdr_planeto_args.c  htrdr_planeto_args.h  htrdr_planeto_args.h.in  htrdr_planeto_c.h  htrdr_planeto_compute_radiance.c  htrdr_planeto_draw_map.c  htrdr_planeto_main.c  htrdr_planeto_source.c  htrdr_planeto_source.h  test_htrdr_planeto_source.c
src/planets/: htrdr_planets.c  htrdr_planets.h  htrdr_planets_args.c  htrdr_planets_args.h  htrdr_planets_args.h.in  htrdr_planets_c.h  htrdr_planets_compute_radiance.c  htrdr_planets_draw_map.c  htrdr_planets_main.c  htrdr_planets_solve_volrad_budget.c  htrdr_planets_source.c  htrdr_planets_source.h  test_htrdr_planets_source.c
